# andork

./: .gitignore  README.md  andork.py  pyproject.toml  requirements.txt
dorks/: simple_10  simple_5  simple_focus_40.dorks  simple_high_signal_60.dorks
