[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andork"
version = "0.1.0"
description = "OSINT recon for external pen tests — document metadata harvest + curated dork sweep across DuckDuckGo and Google."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Austin Coontz", email = "austin.coontz@trustedsec.com" },
]
keywords = ["osint", "pentest", "recon", "metadata", "exiftool", "google-dorks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "selenium>=4.18",
    "webdriver-manager>=4.0",
    "ddgs>=9.0",
]

[project.scripts]
andork = "andork:main"

[tool.hatch.build.targets.wheel]
only-include = ["andork.py"]

[tool.hatch.build.targets.sdist]
only-include = ["andork.py", "requirements.txt"]
